# pomelo-udp-webrtc-plugin

./: .gitmodules  CMakeLists.txt  LICENSE  connection-flow.txt
src/: context.c  context.h  plugin.c  plugin.h
src/base/: address.c  allocator.c  payload.c  payload.h  ref.c  ref.h  rtt.c  rtt.h
src/channel/: channel-dc.c  channel-dc.h  channel-int.h  channel-plugin.c  channel-plugin.h  channel-pool.c  channel-pool.h  channel.c  channel.h
src/codec/: packed.c  packed.h
src/pomelo/: address.h  allocator.h  common.h  plugin.h
src/rtc-api/: rtc-api.cpp  rtc-api.h  rtc-api.hpp  rtc-buffer-pool.cpp  rtc-buffer-pool.hpp  rtc-buffer.cpp  rtc-buffer.hpp  rtc-context.cpp  rtc-context.hpp  rtc-data-channel.cpp  rtc-data-channel.hpp  rtc-object-pool.hpp  rtc-object.cpp  rtc-object.hpp  rtc-peer-connection.cpp  rtc-peer-connection.hpp  rtc-utils.cpp  rtc-utils.hpp  rtc-ws-client.cpp  rtc-ws-client.hpp  rtc-ws-server.cpp  rtc-ws-server.hpp
src/session/: session-int.h  session-pc.c  session-pc.h  session-plugin.c  session-plugin.h  session-pool.c  session-pool.h  session-ws.c  session-ws.h  session.c  session.h
src/socket/: socket-int.h  socket-plugin.c  socket-plugin.h  socket-pool.c  socket-pool.h  socket-wss.c  socket-wss.h  socket.c  socket.h
src/utils/: array.c  array.h  atomic.c  atomic.h  base64.c  base64.h  common-macro.h  list.c  list.h  macro.h  map.c  map.h  mutex.c  mutex.h  pool.c  pool.h  sampling.c  sampling.h  sodium.c  string-buffer.c  string-buffer.h
